# gi-learning

./: .autotools  .cproject  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README~  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  log.txt  old_results.tar.bz2  perf.data  perf.data.old
OLD/: lstar.cpp  lstar.h  minimize.cpp  minimize.h  obt.cpp  obt.h
autom4te.cache/: output.1  output.3  output.4  output.6  output.8  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
documentation/html/: GI-learning_8cpp.html  GI-learning_8cpp.js  GI-learning_8cpp__incl.map  GI-learning_8cpp__incl.md5  GI-learning_8cpp_source.html  annotated.html  annotated.js  blueStar_8cpp.html  blueStar_8cpp.js  blueStar_8cpp__incl.map  blueStar_8cpp__incl.md5  blueStar_8cpp_source.html  blueStar_8h.html  blueStar_8h__dep__incl.map  blueStar_8h__dep__incl.md5  blueStar_8h__incl.map  blueStar_8h__incl.md5  blueStar_8h_source.html  bluefringe_8cpp.html  bluefringe_8cpp.js  bluefringe_8cpp__incl.map  bluefringe_8cpp__incl.md5  bluefringe_8cpp_source.html  bluefringe_8h.html  bluefringe_8h.js  bluefringe_8h__dep__incl.map  bluefringe_8h__dep__incl.md5  bluefringe_8h__incl.map  bluefringe_8h__incl.md5  bluefringe_8h_source.html  classBlue.html  classbluefringe.html  classdfa-members.html  classdfa.html  classdfa.js  classdfaEDSM-members.html  classdfaEDSM.html  classdfaEDSM.js  classdfaEDSM__coll__graph.map  classdfaEDSM__coll__graph.md5  (+168 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  (+38 more)
examples/: examples.txt  examples_big.txt  examples_big2.txt  examples_big2.txt~  examples_big_OLD.txt  examples_dlh.txt~  examples_thesis.txt  lstar.txt  lstar2.txt  lstar3.txt  lstar_6.txt  lstar_angluin.txt  lstar_hopcroft.txt  very_examples_big.txt  wx4ej-samples-CV4.txt
oprofile_data/: abi
oprofile_data/samples/current/{root}/home/piero/Eclipse-GI/workspace-GI/GI-learning/src/giLearning/{dep}/{kern}/no-vmlinux/: CPU_CLK_UNHALTED.100000.0.all.all.all
oprofile_data/samples/current/{root}/home/piero/Eclipse-GI/workspace-GI/GI-learning/src/giLearning/{dep}/{root}/lib64/ld-2.20.so/: CPU_CLK_UNHALTED.100000.0.all.all.all
oprofile_data/samples/current/{root}/home/piero/Eclipse-GI/workspace-GI/GI-learning/src/giLearning/{dep}/{root}/lib64/libc-2.20.so/: CPU_CLK_UNHALTED.100000.0.all.all.all
oprofile_data/samples/previous/{root}/home/piero/Eclipse-GI/workspace-GI/GI-learning/src/giLearning/{dep}/{kern}/no-vmlinux/: CPU_CLK_UNHALTED.100000.0.all.all.all
oprofile_data/samples/previous/{root}/home/piero/Eclipse-GI/workspace-GI/GI-learning/src/giLearning/{dep}/{root}/lib64/ld-2.20.so/: CPU_CLK_UNHALTED.100000.0.all.all.all
oprofile_data/samples/previous/{root}/home/piero/Eclipse-GI/workspace-GI/GI-learning/src/giLearning/{dep}/{root}/lib64/libc-2.20.so/: CPU_CLK_UNHALTED.100000.0.all.all.all
oprofile_data/samples/previous/{root}/home/piero/Eclipse-GI/workspace-GI/GI-learning/src/giLearning/{dep}/{root}/usr/lib64/libboost_system.so.1.56.0/: CPU_CLK_UNHALTED.100000.0.all.all.all
src/: GI-learning.cpp  GI-learning.doxyfile  Makefile  Makefile.am  Makefile.in  blueStar.cpp  blueStar.h  bluefringe.cpp  bluefringe.h  dfa.cpp  dfa.h  dfaEDSM.cpp  dfaEDSM.h  edsm.cpp  edsm.h  giLearning  libdfa-1.0.la  libdfa_1_0_la-dfa.lo  libedsm_1_0_la-blueStar.lo  libedsm_1_0_la-bluefringe.lo  libedsm_1_0_la-dfaEDSM.lo  libedsm_1_0_la-edsm.lo  liblstar-1.0.la  liblstar_1_0_la-lstar.lo  libutilities-1.0.la  libutilities_1_0_la-utilities.lo  log_DA_RISOLVERE.txt  lstar.cpp  lstar.h  messages.h  utilities.cpp  utilities.h  utilities.h~
src/.deps/: giLearning-GI-learning.Po  giLearning-blueStar.Po  giLearning-bluefringe.Po  giLearning-dfa.Po  giLearning-dfaEDSM.Po  giLearning-edsm.Po  giLearning-lstar.Po  giLearning-utilities.Po  libdfa_1_0_la-dfa.Plo  libedsm_1_0_la-blueStar.Plo  libedsm_1_0_la-bluefringe.Plo  libedsm_1_0_la-dfa.Plo  libedsm_1_0_la-dfaEDSM.Plo  libedsm_1_0_la-edsm.Plo  liblstar_1_0_la-lstar.Plo  libutilities_1_0_la-utilities.Plo  libutility_1_0_la-utilities.Plo
src/.libs/: giLearning  libdfa-1.0.lai  libedsm-1.0.la  libedsm-1.0.lai  liblstar-1.0.lai  libutilities-1.0.lai  libutilities-1.0.so.0.0.0  lt-giLearning
src/results/: inferredDFA_edsmd.dot  inferredDFA_lstar.dot
