#EXTRA_DIST = BUGS ChangeLog.O README-alpha
SUBDIRS =  src 

############## boost ###########
#AM_CPPFLAGS = $(BOOST_CPPFLAGS)
#AM_LDFLAGS = $(LDFLAGS_BOOST) \
#    $(LDFLAGS_BOOST_LIBS)
#LIBS += $(LIBS_BOOST)
################################

ACLOCAL_AMFLAGS = -I m4 --install

EXTRA_DIST = m4/NOTES

############## boost ###########
#LDFLAGS_BOOST = \
#    $(BOOST_SYSTEM_LDFLAGS) \
#    $(BOOST_FILESYSTEM_LDFLAGS)
#
#LIBS_BOOST = \
#    $(BOOST_SYSTEM_LIBS) \
#    $(BOOST_FILESYSTEM_LIBS)
################################